--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,21 @@
+commit 379849ff5570306b892db0b94923cc0d385658df
+Author: Paweł Wilk <siefca@gnu.org>
+Date:   Sun Dec 2 02:48:40 2012 +0100
+
+    Anonymous modules caching fixed, added singleton support
+
+commit 38c4f9ac29bb12696c22af23690484fff38c885f
+Author: Paweł Wilk <siefca@gnu.org>
+Date:   Sun Dec 2 02:47:48 2012 +0100
+
+    README updated
+
+commit 2abc6a4c17b753dbe0cb515cc83cf6dd4b25b82f
+Author: Paweł Wilk <siefca@gnu.org>
+Date:   Sat Dec 1 21:52:28 2012 +0100
+
+    ChangeLog and Manifest.txt updated
+
 commit c10e977775a83b8cd1ef4e7a8b1a128b71661beb
 Author: Paweł Wilk <siefca@gnu.org>
 Date:   Sat Dec 1 21:51:34 2012 +0100
