--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+commit 648ddc5fa83e50e72ffbd4ed287d0387ebe9b789
+Author: Paweł Wilk <siefca@gnu.org>
+Date:   Sun Dec 2 03:00:06 2012 +0100
+
+    Release 1.0.0
+
 commit 379849ff5570306b892db0b94923cc0d385658df
 Author: Paweł Wilk <siefca@gnu.org>
 Date:   Sun Dec 2 02:48:40 2012 +0100
